syntax = "proto3";

package movie;

service MovieTicketService {
  rpc CheckAvailability(MovieTicketRequest) returns (MovieTicketResponse) {}
}

message MovieTicketRequest {
  string movie_name = 1;
  string session_time = 2;
  string seat_number = 3;
}

message MovieTicketResponse {
  bool available = 1;
  float price = 2;
}
